@@ -195,6 +195,9 @@ if {   [istarget "i*86-*-*pe*"] \
   gas_test "fastcall.s" ""   "" "fastcall labels"
 }
 
+run_dump_test sleb128
+run_dump_test quad
+
 load_lib gas-dg.exp
 dg-init
 dg-runtest [lsort [glob -nocomplain $srcdir/$subdir/err-*.s $srcdir/$subdir/warn-*.s]] "" ""
