@@ -1,0 +1,12 @@
+	.data
+	.quad	0x76543210
+	.quad	0x80000000
+	.quad	0x87654321
+	.quad	0xffffffff
+	.quad	-0x76543210
+	.quad	-0x80000000
+	.quad	-0x87654321
+	.quad	-0xffffffff
+
+	.quad	0x123456789abcdef
+	.quad	-0x123456789abcdef
