@@ -1,0 +1,22 @@
+	.data
+	.sleb128	0x76543210
+	.sleb128	0x80000000
+	.sleb128	0x87654321
+	.sleb128	0xffffffff
+	.sleb128	-0x76543210
+	.sleb128	-0x80000000
+	.sleb128	-0x87654321
+	.sleb128	-0xffffffff
+
+	.sleb128	0x123456789abcdef
+	.sleb128	-0x123456789abcdef
+
+	.sleb128	-0x7fffffffffff
+	.sleb128	-0x800000000000
+	.sleb128	-0x7fffffffffffffff
+	.sleb128	-0x8000000000000000
+
+	.sleb128	-0x100000000
+	.sleb128	-0x1000000000000
+
+	.fill		32
