@@ -1,3 +1,9 @@
+2005-01-19  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gas/all/sleb128.[sd]: New test.
+	* gas/all/quad.[sd]: New test.
+	* gas/all/gas.exp: Run them.
+
 2005-01-17  Andrew Stubbs  <andrew.stubbs@st.com>
 
 	* gas/sh/arch/arch.exp: Correct the email address.
